Refactor FSKEditorJSNodeDialog. Simplify FileTableModel#getValueAt